--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "server.js",
   "dependencies": {
+    "async": "", 
     "lazy": ""
   },
   "devDependencies": {},
